--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 04:44:33.346244: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 05:33:13.706026: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -56,9 +56,14 @@
     "# from keras_visualizer import visualizer\n",
     "# from IPython.display import Image, SVG, display\n",
     "import datetime\n",
+    "from packaging import version\n",
     "\n",
     "# 回调\n",
-    "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n"
+    "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "# 混合精度\n",
+    "from tensorflow.keras import mixed_precision\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -76,6 +81,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# policy = mixed_precision.Policy('mixed_float16')\n",
+    "# mixed_precision.set_global_policy(policy)\n",
+    "# os.environ['TF_KERAS'] = '1'  # 必须使用tf.keras\n",
+    "# os.environ['TF_XLA_FLAGS'] = '--tf_xla_auto_jit=1'  # 启用XLA"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "DATASET_PATH_ROOT = '/data/DataSets/TWITTER_IMG_SENT_2015/dataset/'\n",
@@ -100,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, 1024]))\n",
@@ -124,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -210,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def start_transfer_learning(run_dir, hparams):\n",
@@ -241,13 +260,13 @@
     "              validation_freq=VAL_FREQ,  # 验证频率\n",
     "              class_weight=None,  # 样本是均衡的\n",
     "              callbacks=\n",
-    "              [TensorBoard(log_dir=run_dir, histogram_freq=1, profile_batch='500,520'),  #TensorBoard\n",
+    "              [TensorBoard(log_dir=run_dir, ),  #TensorBoardprofile_batch='1,10',\n",
     "               hp.KerasCallback(run_dir, hparams),  #超参数\n",
     "               EarlyStopping(monitor='val_accuracy', patience=20),  # 早停选项\n",
     "               ReduceLROnPlateau(monitor='val_accuracy', patience=20),  # 学习率衰减\n",
     "               ModelCheckpoint(f'{run_dir}/Twitter2015_iv3_tl.h5', monitor='val_accuracy', save_best_only=True, save_freq='epoch')  #检查点\n",
     "               ],\n",
-    "              workers=5,  # 线程\n",
+    "              workers=10,  # 线程\n",
     "              )\n",
     "\n",
     "    # 微调 mixed8 248\n",
@@ -303,23 +322,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 04:44:38.246580: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:38.254810: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:38.256372: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:38.258189: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2023-01-07 05:33:18.598584: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:18.606963: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:18.608553: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:18.610365: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-07 04:44:38.258802: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:38.260359: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:38.261804: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:39.053128: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:39.054701: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:39.056150: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 04:44:39.057552: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n",
-      "2023-01-07 04:44:41.471674: I tensorflow/core/profiler/lib/profiler_session.cc:99] Profiler session initializing.\n",
-      "2023-01-07 04:44:41.471719: I tensorflow/core/profiler/lib/profiler_session.cc:114] Profiler session started.\n",
-      "2023-01-07 04:44:41.471756: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1665] Profiler found 1 GPUs\n",
-      "2023-01-07 04:44:41.687891: I tensorflow/core/profiler/lib/profiler_session.cc:126] Profiler session tear down.\n",
-      "2023-01-07 04:44:41.690313: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1799] CUPTI activity buffer flushed\n"
+      "2023-01-07 05:33:18.610987: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:18.612582: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:18.614105: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:19.415281: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:19.416812: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:19.418253: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 05:33:19.419682: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
      ]
     },
     {
@@ -333,74 +347,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 04:45:11.474386: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
-      "2023-01-07 04:45:12.265278: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
+      "2023-01-07 05:33:51.433637: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
+      "2023-01-07 05:33:52.259109: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - ETA: 0s - loss: 0.8656 - accuracy: 0.4003WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.6735 - accuracy: 0.5851WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
       "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
       "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 35s 35s/step - loss: 0.8656 - accuracy: 0.4003 - lr: 0.0010\n",
+      "1/1 [==============================] - 33s 33s/step - loss: 0.6735 - accuracy: 0.5851 - lr: 0.0010\n",
       "Epoch 2/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 4.9273 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - ETA: 0s - loss: 5.3535 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
       "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
       "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 4.9273 - accuracy: 0.6726 - lr: 0.0010\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 5.3535 - accuracy: 0.6726 - lr: 0.0010\n",
       "Epoch 3/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 3.3594 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - ETA: 0s - loss: 2.8445 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
       "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
       "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 3.3594 - accuracy: 0.6726 - lr: 0.0010\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 2.8445 - accuracy: 0.6726 - lr: 0.0010\n",
       "Epoch 4/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 1.5130 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.6566 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
       "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
       "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 1.5130 - accuracy: 0.6726 - lr: 0.0010\n",
-      "Epoch 5/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.5743 - accuracy: 0.6888WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 0.5743 - accuracy: 0.6888 - lr: 0.0010\n",
-      "Epoch 6/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.9619 - accuracy: 0.3306WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 0.9619 - accuracy: 0.3306 - lr: 0.0010\n",
-      "Epoch 7/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 1.0549 - accuracy: 0.3274WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 1.0549 - accuracy: 0.3274 - lr: 0.0010\n",
-      "Epoch 8/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.8893 - accuracy: 0.3274WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 0.8893 - accuracy: 0.3274 - lr: 0.0010\n",
-      "Epoch 9/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.7289 - accuracy: 0.3744WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 0.7289 - accuracy: 0.3744 - lr: 0.0010\n",
-      "Epoch 10/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.6401 - accuracy: 0.7310WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 0.6401 - accuracy: 0.7310 - lr: 0.0010\n",
-      "Epoch 11/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.6074 - accuracy: 0.6888WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 0.6074 - accuracy: 0.6888 - lr: 0.0010\n",
-      "Epoch 12/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.6169 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 16s 16s/step - loss: 0.6169 - accuracy: 0.6726 - lr: 0.0010\n",
-      "Epoch 13/500\n"
+      "1/1 [==============================] - 13s 13s/step - loss: 0.6566 - accuracy: 0.6726 - lr: 0.0010\n",
+      "Epoch 5/500\n"
      ]
     }
    ],
