--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -2,31 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# CNN迁移学习"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 环境导入"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2023-01-06T22:57:53.487034Z",
+     "iopub.status.busy": "2023-01-06T22:57:53.486794Z",
+     "iopub.status.idle": "2023-01-06T22:57:55.389696Z",
+     "shell.execute_reply": "2023-01-06T22:57:55.389019Z",
+     "shell.execute_reply.started": "2023-01-06T22:57:53.486981Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 05:33:13.706026: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 06:57:53.631961: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -64,62 +73,92 @@
     "# 混合精度\n",
     "from tensorflow.keras import mixed_precision\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 参数区"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2023-01-06T22:57:55.391852Z",
+     "iopub.status.busy": "2023-01-06T22:57:55.391148Z",
+     "iopub.status.idle": "2023-01-06T22:57:55.394671Z",
+     "shell.execute_reply": "2023-01-06T22:57:55.394102Z",
+     "shell.execute_reply.started": "2023-01-06T22:57:55.391829Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# policy = mixed_precision.Policy('mixed_float16')\n",
     "# mixed_precision.set_global_policy(policy)\n",
     "# os.environ['TF_KERAS'] = '1'  # 必须使用tf.keras\n",
     "# os.environ['TF_XLA_FLAGS'] = '--tf_xla_auto_jit=1'  # 启用XLA"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2023-01-06T22:57:55.396014Z",
+     "iopub.status.busy": "2023-01-06T22:57:55.395791Z",
+     "iopub.status.idle": "2023-01-06T22:57:55.400927Z",
+     "shell.execute_reply": "2023-01-06T22:57:55.400381Z",
+     "shell.execute_reply.started": "2023-01-06T22:57:55.395996Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "DATASET_PATH_ROOT = '/data/DataSets/TWITTER_IMG_SENT_2015/dataset/'\n",
     "OUT_PATH_ROOT = '/data/Models/TWITTER_SENT_2015/'\n",
     "OUT_LOG_PATH = OUT_PATH_ROOT + 'logs/'\n",
     "\n",
-    "TOTAL_EPOCH = 500\n",
+    "TOTAL_EPOCH = 200\n",
     "VAL_FREQ = 20"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "超参数"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "超参数\n",
+    "\n",
+    "200次迭代后表现良好\n",
+    "\n",
+    "/home/ubuntu/notebook/Models/TWITTER_SENT_2015/logs/hparam_tuning/20230107-065755/run-2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2023-01-06T22:57:55.402067Z",
+     "iopub.status.busy": "2023-01-06T22:57:55.401647Z",
+     "iopub.status.idle": "2023-01-06T22:57:55.407257Z",
+     "shell.execute_reply": "2023-01-06T22:57:55.406732Z",
+     "shell.execute_reply.started": "2023-01-06T22:57:55.402040Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, 1024]))\n",
@@ -127,23 +166,31 @@
     "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam', 'sgd']))\n",
     "HP_METHOD = hp.HParam('train_method', hp.Discrete(['TransferLearning', 'FineTune']))\n",
     "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001]))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 数据准备"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2023-01-06T22:57:55.408388Z",
+     "iopub.status.busy": "2023-01-06T22:57:55.408000Z",
+     "iopub.status.idle": "2023-01-06T22:57:55.477795Z",
+     "shell.execute_reply": "2023-01-06T22:57:55.477188Z",
+     "shell.execute_reply.started": "2023-01-06T22:57:55.408368Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -187,27 +234,34 @@
     "train_generator = train_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}train', target_size=(299, 299), batch_size=617)\n",
     "val_generator = val_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}validation', target_size=(299, 299), batch_size=176)\n",
     "test_generator = test_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}test', target_size=(299, 299), batch_size=89)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 迁移学习"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2023-01-06T22:57:55.479095Z",
+     "iopub.status.busy": "2023-01-06T22:57:55.478623Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "Launching TensorBoard..."
+      "text/plain": [
+       "Launching TensorBoard..."
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -222,14 +276,17 @@
     "%load_ext tensorboard\n",
     "%tensorboard --logdir {LOG_DIR} --port 6006 --bind_all\n",
     "# @formatter:on"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "def start_transfer_learning(run_dir, hparams):\n",
@@ -262,8 +319,8 @@
     "              callbacks=\n",
     "              [TensorBoard(log_dir=run_dir, ),  #TensorBoardprofile_batch='1,10',\n",
     "               hp.KerasCallback(run_dir, hparams),  #超参数\n",
-    "               EarlyStopping(monitor='val_accuracy', patience=20),  # 早停选项\n",
-    "               ReduceLROnPlateau(monitor='val_accuracy', patience=20),  # 学习率衰减\n",
+    "               # EarlyStopping(monitor='val_accuracy',patience=20,baseline=0.88,restore_best_weights=True, ),  # 早停选项\n",
+    "               # ReduceLROnPlateau(monitor='val_accuracy', ),  # 学习率衰减\n",
     "               ModelCheckpoint(f'{run_dir}/Twitter2015_iv3_tl.h5', monitor='val_accuracy', save_best_only=True, save_freq='epoch')  #检查点\n",
     "               ],\n",
     "              workers=10,  # 线程\n",
@@ -300,84 +357,29 @@
     "    # print(scores)\n",
     "\n",
     "    # return scores\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 超参数调整"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-07 05:33:18.598584: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:18.606963: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:18.608553: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:18.610365: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-07 05:33:18.610987: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:18.612582: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:18.614105: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:19.415281: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:19.416812: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:19.418253: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 05:33:19.419682: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
-     ]
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/500\n"
-     ]
+    "pycharm": {
+     "is_executing": true
     },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-07 05:33:51.433637: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
-      "2023-01-07 05:33:52.259109: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - ETA: 0s - loss: 0.6735 - accuracy: 0.5851WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 33s 33s/step - loss: 0.6735 - accuracy: 0.5851 - lr: 0.0010\n",
-      "Epoch 2/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 5.3535 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 13s 13s/step - loss: 5.3535 - accuracy: 0.6726 - lr: 0.0010\n",
-      "Epoch 3/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 2.8445 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 14s 14s/step - loss: 2.8445 - accuracy: 0.6726 - lr: 0.0010\n",
-      "Epoch 4/500\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.6566 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
-      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
-      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
-      "1/1 [==============================] - 13s 13s/step - loss: 0.6566 - accuracy: 0.6726 - lr: 0.0010\n",
-      "Epoch 5/500\n"
-     ]
-    }
-   ],
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# 超参数运行\n",
     "def run_hparams():\n",
@@ -399,34 +401,28 @@
     "\n",
     "\n",
     "run_hparams()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "tensorflow",
+   "display_name": "TensorFlow",
    "language": "python",
-   "display_name": "TensorFlow"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
