--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 06:57:53.631961: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 20:15:32.529953: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
     "\n",
     "# 导入建立神经网络的基本模块\n",
     "from keras.preprocessing import image\n",
-    "from keras.models import Model\n",
+    "from keras.models import Model, load_model\n",
     "from keras.layers import Dense, GlobalAveragePooling2D, Dropout\n",
     "\n",
     "from keras.optimizers import *\n",
@@ -128,7 +128,7 @@
     "OUT_PATH_ROOT = '/data/Models/TWITTER_SENT_2015/'\n",
     "OUT_LOG_PATH = OUT_PATH_ROOT + 'logs/'\n",
     "\n",
-    "TOTAL_EPOCH = 200\n",
+    "TOTAL_EPOCH = 500\n",
     "VAL_FREQ = 20"
    ]
   },
@@ -162,8 +162,8 @@
    "outputs": [],
    "source": [
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, 1024]))\n",
-    "HP_DROPOUT = hp.HParam('dropout', hp.Discrete([0.0, 0.5]))\n",
-    "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam', 'sgd']))\n",
+    "HP_DROPOUT = hp.HParam('dropout', hp.Discrete([0.5, 0.2]))\n",
+    "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam']))\n",
     "HP_METHOD = hp.HParam('train_method', hp.Discrete(['TransferLearning', 'FineTune']))\n",
     "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001]))"
    ]
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -259,9 +259,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Launching TensorBoard..."
-      ]
+      "text/plain": "Launching TensorBoard..."
      },
      "metadata": {},
      "output_type": "display_data"
@@ -280,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -368,14 +366,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "is_executing": true
     },
     "tags": []
    },
@@ -399,9 +394,45 @@
     "                )\n",
     "                session_num += 1\n",
     "\n",
-    "\n",
-    "run_hparams()"
+    "# run_hparams()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 推理任务"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "\n",
+    "# BEST_TRAINACC_MODEL = f'/home/ubuntu/notebook/Models/TWITTER_SENT_2015/logs/hparam_tuning/20230107-065755/run-7/Twitter2015_iv3_tl.h5'\n",
+    "# read_model = load_model(BEST_TRAINACC_MODEL)\n",
+    "# read_model.evaluate(test_generator)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "# 2 0.7977527976036072\n",
+    "#4 0.8089\n",
+    "#6 0.82\n",
+    "#"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
