--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -71,7 +71,7 @@
     "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
     "\n",
     "# 混合精度\n",
-    "from tensorflow.keras import mixed_precision\n",
+    "# from tensorflow.keras import mixed_precision\n",
     "\n"
    ]
   },
@@ -129,7 +129,7 @@
     "OUT_LOG_PATH = OUT_PATH_ROOT + 'logs/'\n",
     "\n",
     "TOTAL_EPOCH = 500\n",
-    "VAL_FREQ = 20"
+    "VAL_FREQ = 1"
    ]
   },
   {
@@ -161,11 +161,11 @@
    },
    "outputs": [],
    "source": [
-    "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, 1024]))\n",
-    "HP_DROPOUT = hp.HParam('dropout', hp.Discrete([0.5, 0.2]))\n",
+    "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, ]))\n",
+    "HP_DROPOUT = hp.HParam('dropout', hp.Discrete([0.2]))\n",
     "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam']))\n",
     "HP_METHOD = hp.HParam('train_method', hp.Discrete(['TransferLearning', 'FineTune']))\n",
-    "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001]))"
+    "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001, 0.00001]))"
    ]
   },
   {
@@ -259,7 +259,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Launching TensorBoard..."
+      "text/plain": [
+       "Launching TensorBoard..."
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -302,8 +304,16 @@
     "    # 锁层\n",
     "    base_model.trainable = False\n",
     "\n",
+    "    # 学习率调整\n",
+    "    if hparams[HP_OPTIMIZER] == 'adam':\n",
+    "        optimizer = Adam(learning_rate=hparams[HP_L_RATE])\n",
+    "    elif hparams[HP_OPTIMIZER] == 'svd':\n",
+    "        optimizer = SGD(learning_rate=hparams[HP_L_RATE])\n",
+    "    else:\n",
+    "        raise Exception('No optimizer')\n",
+    "\n",
     "    # 编译模型\n",
-    "    model.compile(optimizer=hparams[HP_OPTIMIZER], loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "    model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "    # model.summary()\n",
     "\n",
     "    # 训练\n",
@@ -382,57 +392,61 @@
     "    for num_units in HP_NUM_UNITS.domain.values:\n",
     "        for dropout_rate in HP_DROPOUT.domain.values:\n",
     "            for optimizer in HP_OPTIMIZER.domain.values:\n",
-    "                # for learning_rate in HP_L_RATE.domain.values:\n",
-    "                start_transfer_learning(\n",
-    "                        LOG_DIR + f'run-{session_num}',\n",
-    "                        {\n",
-    "                                HP_NUM_UNITS: num_units,\n",
-    "                                HP_DROPOUT  : dropout_rate,\n",
-    "                                HP_OPTIMIZER: optimizer,\n",
-    "                                # HP_L_RATE   : learning_rate,\n",
-    "                        }\n",
-    "                )\n",
-    "                session_num += 1\n",
+    "                for learning_rate in HP_L_RATE.domain.values:\n",
+    "                    start_transfer_learning(\n",
+    "                            LOG_DIR + f'run-{session_num}',\n",
+    "                            {\n",
+    "                                    HP_NUM_UNITS: num_units,\n",
+    "                                    HP_DROPOUT  : dropout_rate,\n",
+    "                                    HP_OPTIMIZER: optimizer,\n",
+    "                                    HP_L_RATE   : learning_rate,\n",
+    "                            }\n",
+    "                    )\n",
+    "                    session_num += 1\n",
     "\n",
     "# run_hparams()"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 推理任务"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
     "# BEST_TRAINACC_MODEL = f'/home/ubuntu/notebook/Models/TWITTER_SENT_2015/logs/hparam_tuning/20230107-065755/run-7/Twitter2015_iv3_tl.h5'\n",
     "# read_model = load_model(BEST_TRAINACC_MODEL)\n",
     "# read_model.evaluate(test_generator)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# 2 0.7977527976036072\n",
     "#4 0.8089\n",
     "#6 0.82\n",
     "#"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
